<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal"
              tools:context=".MainActivity"
    >
    <CheckBox
        android:id="@+id/calendarViewShown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/calendarViewShown"
        />
    <CheckBox
        android:id="@+id/spinnersShown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/spinnersShown"
        />
    <Spinner
        android:id="@+id/datePickerMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:prompt="@string/datePickerMode"
        android:entries="@array/datePickerMode"
        />
    <Spinner
        android:id="@+id/activityClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:prompt="@string/activityClass"
        android:entries="@array/activityClass"
        />
    <Spinner
        android:id="@+id/activityTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:prompt="@string/activityTheme"
        android:entries="@array/activityTheme"
        />
    <Button
        android:id="@+id/showDatePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showDatePickerButton"
        />
</LinearLayout>
